# labs_C

./: .gitignore  README.md
sem3/FundAlg/lab2/: CMakeLists.txt  Makefile
sem3/FundAlg/lab2/ex1/: Makefile  ex1.c
sem3/FundAlg/lab2/ex10/: Makefile  ex10.c  ex10.h  main.c
sem3/FundAlg/lab2/ex2/: Makefile  ex2.c  main.c
sem3/FundAlg/lab2/ex3/: Makefile  ex3.c  ex3.h  main.c  test1
sem3/FundAlg/lab2/ex4/: Makefile  ex4.c  ex4.h  main.c  test.c
sem3/FundAlg/lab2/ex5/: Makefile  main.c  overloads.c  overloads.h
sem3/FundAlg/lab2/ex6/: Makefile  a.out  ex6.c  ex6.h  main.c  test
sem3/FundAlg/lab2/ex7/: Makefile  ex7.c  main.c
sem3/FundAlg/lab2/ex8/: Makefile  ex8.c  main.c
sem3/FundAlg/lab2/ex9/: Makefile  ex9.c  ex9.h  main.c  test.c
sem3/FundAlg/lab2/test_files/: task_6_test_1_output
sem3/FundAlg/lab2/vector/: charvector.c  charvector.h  intvector.c  stringvector.c  stringvector.h
sem3/FundAlg/lab3/: CMakeLists.txt  Makefile  main
sem3/FundAlg/lab3/ex1/: Makefile  ex1.c  ex1.h  main.c  test.c  test.h
sem3/FundAlg/lab3/ex10/: a.out  ex10.c  ex10.h  main.c  result  test
sem3/FundAlg/lab3/ex2/: Makefile  ex2.c  ex2.h  main.c  test.c  test.h
sem3/FundAlg/lab3/ex3/: Makefile  ex3.c  ex3.h  main.c  output  test
sem3/FundAlg/lab3/ex4/: Makefile  mail.c  mail.h  main.c  test.c
sem3/FundAlg/lab3/ex5/: commands  ex5.c  ex5.h  main.c  test2
sem3/FundAlg/lab3/ex7/: commands  ex7.c  ex7.h  main.c
sem3/FundAlg/lab3/ex8/: Makefile  ex8.c  ex8.h  main.c  test  test.c
sem3/FundAlg/lab3/ex9/: Makefile
sem3/FundAlg/lab3/lib/mstring/: mstring.c  mstring.h
sem3/FundAlg/lab3/lib/vector/: charvector.c  charvector.h  intvector.c  stringvector.c
sem3/FundAlg/lab3/test_files/: task_3_test_3_correct_output  task_3_test_4_correct_output  task_3_test_4_input  task_3_test_4_output
sem3/FundAlg/lab4/: CMakeLists.txt  Makefile
sem3/FundAlg/lab4/ex1/: ex1.c  ex1.h  main.c  test2
sem3/FundAlg/lab4/ex2/: Makefile  ex2.c  ex2.h  in.txt  main.c
sem3/FundAlg/lab4/ex7/: ex7.c  main.c  test
sem3/FundAlg/lab4/ex9/: LOG_FILE  Makefile  d2  main.c  sss  test_file_1  test_file_10  test_file_11  test_file_12  test_file_13  test_file_14  test_file_15  test_file_16  test_file_17  test_file_18  test_file_19  test_file_2  test_file_20  test_file_21  test_file_22  test_file_23  test_file_24  test_file_25  test_file_26  test_file_27  test_file_28  test_file_29  test_file_3  test_file_30  test_file_4  test_file_5  test_file_6  test_file_7  test_file_8  test_file_9
sem3/FundAlg/lab4/ex9/application/: application.c  application.h
sem3/FundAlg/lab4/ex9/auxiliary_application_2/: auxiliary_application_2.c  test_file_1  test_file_10  test_file_11  test_file_12  test_file_13  test_file_14  test_file_15  test_file_16  test_file_17  test_file_18  test_file_19  test_file_2  test_file_20  test_file_21  test_file_22  test_file_23  test_file_24  test_file_25  test_file_26  test_file_27  test_file_28  test_file_29  test_file_3  test_file_30  test_file_31  test_file_32  test_file_33  test_file_34  test_file_4  test_file_5  test_file_6  test_file_7  test_file_8  test_file_9
sem3/FundAlg/lab4/ex9/heaps/: heaps.c  heaps.h
sem3/FundAlg/lab4/ex9/main_files/: main-stage.c
sem3/FundAlg/lab4/lib/SystemErrors2/: Makefile  errors.h
sem3/FundAlg/lab4/lib/vector/: charvector.c  charvector.h  intvector.c  intvector.h
sem3/OS/lab2/: CMakeLists.txt  Makefile  game  main.c
sem3/OS/lab2/SystemErrors/: errors.c  errors.h
sem3/OS/lab2/utility/: functions.c  functions.h  utility.c  utility.h
sem3/lab1/: CMakeLists.txt  Makefile  main.c  out_text  test  text  text2
sem3/lab1/ex1/: Makefile  ex1.c  ex1.h  main.c
sem3/lab1/ex10/: ex10.c  main.c  test
sem3/lab1/ex2/: Makefile  ex2.c  ex2.h  main.c  test
sem3/lab1/ex3/: Makefile  ex3.c  ex3.h  main.c
sem3/lab1/ex4/: Makefile  ex4.c  ex4.h  main.c  out_test  sadfsdf  test
sem3/lab1/ex5/: Makefile  ex5.c  ex5.h  main.c  test
sem3/lab1/ex6/: ex6.c  ex6.h  main.c  test
sem3/lab1/ex7/: Makefile  ex7.c  ex7.h  main.c  result  s  text  text2
sem3/lab1/ex8/: Makefile  ex8.c  ex8.h  main.c  sd  ss  text
sem3/lab1/ex9/: Makefile  ex9.c  ex9.h  main.c  test
sem3/lab1/vector/: charvector.c  charvector.h  intvector.c  intvector.h
sem3/lab2/: CMakeLists.txt
sem3/lab2/SystemErrors/: errors.c  errors.h
sem3/lab2/ex1/: ex1.c  ex1.h  main.c
sem3/lab2/ex2/: ex2.c  ex2.h  main.c
sem3/lab2/ex3/: ex3.c  main.c  test1  test2
sem3/lab2/ex4/: ex4.c  ex4.h  main.c
sem3/lab2/vector/: charvector.c  charvector.h  stringvector.c
sem4/SystemProg/lab1/: CMakeLists.txt
sem4/SystemProg/lab1/ex1/: main.c  utility.c  utility.h  utils.c  utils.h
sem4/SystemProg/lab1/ex2/: main.c  test  test.py  test2  test_4  utility.c  utility.h
sem4/SystemProg/lab1/ex3/: main.c  utility.c  utility.h
sem4/SystemProg/lab1/ex4/: tokens.h
sem4/SystemProg/lab1/ex4/client/: client.c  test2  utility.c  utility.h
sem4/SystemProg/lab1/ex4/server/: server.c  utility.c  utility.h
sem4/SystemProg/lab1/ex5/: main.c  utility.c  utility.h
sem4/SystemProg/lab1/ex6/: tokens.h
sem4/SystemProg/lab1/ex6/client/: client.c  test  utility.c  utility.h
sem4/SystemProg/lab1/ex6/server/: server.c  utility.c  utility.h
sem4/SystemProg/lab1/ex7/: main.c  utility.c  utility.h
sem4/SystemProg/lab1/libs/CustomErrors/: errors.h
sem4/SystemProg/lab1/libs/mstring/: mstring.c  mstring.h
sem4/SystemProg/lab1/libs/universal_vector/: vector.h
sem4/SystemProg/lab1/libs/vector/: charvector.c  charvector.h  (+3 more)
sem4/SystemProg/lab1/output/: CMakeCache.txt  Makefile  cmake_install.cmake  ex1
sem4/SystemProg/lab2/: CMakeLists.txt
sem4/SystemProg/lab2/builder/: CMakeCache.txt  Makefile  cmake_install.cmake
sem4/SystemProg/lab2/ex1/: CMakeLists.txt
sem4/SystemProg/lab2/ex2/: CMakeLists.txt
sem4/SystemProg/lab2/ex3/: CMakeLists.txt
sem4/SystemProg/lab2/ex4/: CMakeLists.txt  main.cpp
sem4/SystemProg/lab3/: CMakeLists.txt
sem4/SystemProg/lab3/client/: CMakeLists.txt  cc.cpp
sem4/SystemProg/lab3/server/: CMakeLists.txt
sem4/SystemProg/lab3/utils/: CMakeLists.txt
(+277 files in other folders)
